# finlearnspellcorrect

./: .gitignore  Cargo.toml  README.md  build-lower.sh  build-lowerstop.sh  build.sh  demo-naive.sh  demo.sh
engine/: Cargo.toml  build.rs  build.sh  demo-naive.sh  demo.sh
engine/libs/opensubtitles/: Cargo.toml
engine/src/: main.rs
evaluation/: answers  do_eval.sh  dump_hist.py  make_f_measure_plot.py  make_plot.py  make_plot_both.py  make_plots.sh  results.tsv  test_set.redux
fst/: Makefile  att2dot.sh  charmetric.py  hasrel.py  make_finnish2english.py
libs/opensubtitles/src/: lib.rs
src/: main.rs
testset/: make_test_set.py
